Post Pages and minor fixes
For posts, you can load the next/previous 5
For friends, you can load the next page, but haven't implemented next part yet

--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@
 	background-color: hsl(40,65%,100%);
 }
 
-.post {
+.post, .new_post {
 	margin: 1vh 1vw;
 	padding: 1vw;
 	border: .2vw outset orange;
